Card alignment fixed

--- a/src/app/dashboard.tsx/style.css
+++ b/src/app/dashboard.tsx/style.css
@@ -78,11 +78,13 @@
     font-weight: 600;
     line-height: 32px;
     letter-spacing: 0.15px;
+    margin-top: 20px;
 }
 
 table {
     border-collapse: collapse;
     width: 100%;
+    margin-top: 20px;
 }
 
 td {
@@ -147,7 +149,13 @@ table th {
 
 @media only screen and (max-width: 825px) {
     .dashboard-cardstyle {
-        margin-top: 25px;
+        margin-top: 20px;
+    }
+}
+
+@media (min-width: 825px) and (max-width: 1000px){
+    .dashboard-cardstyle {
+        margin-top: 20px;
     }
 }
 
