--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,10 +1,8 @@
-
 /*----------------------------------menu-------------------------------------*/
-.headernav{
+.headernav {
     border-bottom: 1px solid rgba(149, 149, 149, 0.37);
     width: 100%;
     color: #000;
-    /* overflow: hidden; */
     /* position: fixed; */
     z-index: 10;
 }
@@ -16,7 +14,12 @@
     z-index: 100;
 } */
 
-.logout-btn{
+/* .content-layout{
+    margin-top: 5% !important;
+    margin-left: 13%;
+} */
+
+.logout-btn {
     margin-top: 20px;
     float: right;
     display: flex;
@@ -27,4 +30,161 @@
     align-items: center;
     border-radius: 50px;
     border: 1px solid #D9D9D9;
+    z-index: 1000;
+}
+
+.ant-menu-item {
+    color: #FFF;
+    font-family: Lato;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.ant-menu-item-selected .ant-menu-title-content {
+    color: #1C1B1F;
+}
+
+.ant-menu-item-selected {
+    border-radius: 20px !important;
+}
+
+
+/* -----------------------------------------Content----------------------------------------*/
+
+.investor-head-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.investor-head-content h4 {
+    color: #3A3541;
+    font-family: Lato;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 600;
+    padding-left: 20px;
+    margin: 0;
+    margin-top: -15px;
+}
+
+.investor-head-search {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    padding-right: 30px;
+}
+
+.investor-head-search .ant-input {
+    padding-left: 7px !important;
+}
+
+.investor-head-search button {
+    display: flex;
+    width: 140px;
+    height: 40px;
+    padding: 15px 0px;
+    color: #FFF;
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 400;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    background: var(--background);
+}
+
+.investor-head-search button:hover {
+    color: #FFF !important;
+}
+
+
+
+/* --------------------------Card-Design--------------------------------------- */
+
+.card-align-bg {
+    border-radius: 16px;
+    background: #E8F6FF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.company-card-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-content h4 {
+    color: #0D5795;
+    font-family: Lato;
+    font-size: 22px;
+    font-weight: 600;
+    margin: 5px;
+    line-height: 30px;
+}
+
+.card-content h6 {
+    color: #303030;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 5px;
+    line-height: 30px;
+}
+
+.card-mobile-details h5 {
+    color: #086FAB;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0;
+    text-decoration-line: underline;
+    position: absolute;
+    bottom: 0;
+}
+
+@media (max-width: 825px) {
+    .investor-head-content {
+        margin-top: 0px;
+    }
+
+    .investor-head-content h4 {
+        margin: 0;
+        margin-top: -15px;
+    }
+
+    .card-align-bg {
+        margin-top: 20px;
+    }
+
+}
+
+@media (min-width: 820px) {
+    .card-align-bg {
+        margin-top: 20px;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .investor-head-content h4 {
+        display: none;
+    }
+
+    .card-content h6 {
+        font-size: 14px;
+    }
+
+    .card-mobile-details h5 {
+        font-size: 12px;
+        bottom: 10px;
+        right: -5px;
+    }
+
+    .card-align-bg {
+        margin-top: 20px;
+    }
 }
